--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,9 @@ name: selenium
 
 # Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  # pull_request:
-  #   branches: [ main ]
+  workflow_dispatch:
   schedule:
-    - cron: '0 23 * * *'
+    - cron: '30 1 * * *'
   # Allows you to run this workflow manually from the Actions tab
 #  workflow_dispatch:
 
@@ -29,7 +25,7 @@ jobs:
       - name: 'Set up Python'
         uses: actions/setup-python@v1
         with:
-           python-version: 3.6
+           python-version: 3.9
       - name: 'Install requirements'
         run: |
           pip install --upgrade pip
@@ -43,8 +39,7 @@ jobs:
           # sudo cp -p ./chromedriver /usr/bin/
           # chmod -R 777 /usr/bin/chromedriver
           # python ./gamekegs.py ${{ secrets.GAMEKEGS_USERNAME }} ${{ secrets.GAMEKEGS_PASSWORD }}
-          python ./muacloud.py ${{ secrets.MUACLOUD_USERNAME }} ${{ secrets.MUACLOUD_PASSWORD }}
-          python ./hupu.py ${{ secrets.HUPU_USERNAME }} ${{ secrets.HUPU_PASSWORD }}
+          python ./main.py
           # python ./juejin.py   ${{ secrets.JUEJIN_USERNAME }} ${{ secrets.JUEJIN_PASSWORD }}
           # python ./moyupai.py  ${{ secrets.MOYUPAI_USERNAME }} ${{ secrets.MOYUPAI_PASSWORD }}
           # python ./v2ex.py  ${{ secrets.V2EX_USERNAME }} ${{ secrets.V2EX_PASSWORD }}
